--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
     // 🧠 Example of usage:
     // buildPeter() // should return { firstName: "Peter", lastName: "Pan", age: 12 }
     function buildPeter() {
-
+      let objPeter = {firstName: "Peter", lastName: "Pan", age: 12};
+      return objPeter; 
     }
 
     // 👉 CHALLENGE 2
@@ -31,7 +32,8 @@
     // 🧠 Example of usage:
     // buildUser("John", "Smith", 30) // should return { firstName: "John", lastName: "Smith", age: 30 }
     function buildUser(firstName, lastName, age) {
-
+      let user = {firstName: firstName, lastName: lastName, age: age};
+      return user;
     }
 
     // 👉 CHALLENGE 3
@@ -42,7 +44,16 @@
     // 🧠 Examples of usage:
     // deletePrice({ item: "Tesla Model 3", price: 40000 }) // should return { item: "Tesla Model 3" }
     // deletePrice({ item: "Kobo Libra 2" }) // should return { item: "Kobo Libra 2", priceless: true }
-    function deletePrice() {
+    function deletePrice(item) {
+      for (let idx in item){
+        if (item.hasOwnProperty("price")){
+          delete item.price;
+        }
+        else{
+          item.priceless = true;
+        }
+        return item;
+      } 
 
     }
 
@@ -52,8 +63,8 @@
     // 🧠 Examples of usage:
     // evenList(['a']) // should return false
     // evenList(['a', 'b']) // should return true
-    function evenList(arr) {
-
+    function evenList(list) {
+     return list.length % 2 ===0;
     }
 
     // 👉 CHALLENGE 5
@@ -62,8 +73,15 @@
     // 🧠 Examples of usage:
     // firstOrLast(['a', 'b'], true) // should return 'a'
     // firstOrLast(['a', 'b'], false) // should return 'b'
-    function firstOrLast() {
-
+    function firstOrLast(arr, bool) {
+      for (idx in arr){
+        if(bool===true){
+          return arr[0];
+        }
+        else{
+          return arr[arr.length - 1];
+        }
+      }
     }
 
     // 👉 CHALLENGE 6
@@ -72,8 +90,9 @@
     // 🧠 Examples of usage:
     // pushElement([], 1) // should return [1]
     // pushElement(['a', 'b'], 'c') // should return ['a', 'b', 'c']
-    function pushElement() {
-
+    function pushElement(val1, val2) {
+      val1.push(val2);
+      return val1;
     }
 
     // 👉 CHALLENGE 7
@@ -88,8 +107,17 @@
     // 🧠 At each iteration of the loop, if the current character is not "x", then add it to the end of the result array.
     // 🧠 You can merge the result array back into a string by using join. Example: ["f", "o", "o"].join("") yields "foo"
     // 🧠 Do not forget to return your rejoined string!
-    function stripX() {
-
+    function stripX(strarg) {
+      let resultarr =[];
+      const splitword = strarg.split('');
+      for(let i in splitword){
+        if(splitword[i]!=='x'){
+          resultarr.push(splitword[i]);
+        }
+      } 
+      let result = resultarr.join('');
+      return result;
+        
     }
 
     // 👉 CHALLENGE 8
@@ -101,8 +129,16 @@
     // ❗ Important Notes:
     // 🧠 Try to solve this problem without looking at how you solved the previous one.
     // 🧠 If you need to look, do not copy & paste code. Take a peek and then work from memory!
-    function stripChar() {
-
+    function stripChar(firstarg, secondarg) {
+      let resultarr2 = [];
+      const splitword2 = firstarg.split('');
+      for (i in splitword2){
+        if(splitword2[i]===secondarg){
+          delete splitword2[i];
+        }
+      }
+      let result2 = splitword2.join('');
+      return result2;
     }
 
     // 👉 CHALLENGE 9
@@ -114,9 +150,15 @@
     // getProps({ lastName: "Smith", age: 35 }) // should return ["lastName"]
     // getProps({ firstName: "Jane", married: false }) // should return ["firstName"]
     // getProps({ name: "Bamby", favFood: "flowers" }) // should return ["name", "favFood"]
-    function getProps() {
-
-    }
+    function getProps(obj2) {
+      let result = [];
+      for (let key in obj2){
+        if(key!=='age' && key!=='married'){
+          result[result.length] = key;
+        }
+      }
+      return result;
+  }
 
     // 🧪 TESTS, do not work below this line
     // 🧪 TESTS, do not work below this line
